--- a/paper/tex/implementation/How_will_a_synchronization-server_be_build.tex
+++ b/paper/tex/implementation/How_will_a_synchronization-server_be_build.tex
@@ -1,15 +1,15 @@
 \hypertarget{implementation}{%
-\section{Implementation}\label{implementation}}
+\chapter{Implementation}\label{implementation}}
 
 \hypertarget{how-will-a-synchronization-server-be-build}{%
-\subsection{How will a synchronization-server be
+\section{How will a synchronization-server be
 build}\label{how-will-a-synchronization-server-be-build}}
 
 In this section the implementation of the synchronization-server will be
 given.
 
 \hypertarget{how-will-the-synchronization-server-save-the-data-of-the-finite-state-machines}{%
-\subsubsection{How will the synchronization-server save the data of the
+\subsection{How will the synchronization-server save the data of the
 finite-state
 machines}\label{how-will-the-synchronization-server-save-the-data-of-the-finite-state-machines}}
 
@@ -35,7 +35,7 @@ and their attributes structs will be used:
 \end{Shaded}
 
 \hypertarget{how-will-the-synchronization-server-determine-the-next-action-for-the-finite-state-machines}{%
-\subsubsection{How will the synchronization-server determine the next
+\subsection{How will the synchronization-server determine the next
 action for the finite-state
 machines}\label{how-will-the-synchronization-server-determine-the-next-action-for-the-finite-state-machines}}
 
@@ -131,7 +131,7 @@ be executed by the current derivates is determined. In
 array of actions, this action will be executed.
 
 \hypertarget{how-will-the-synchronization-server-determine-the-finite-state-machines-that-will-execute-an-action}{%
-\subsubsection{How will the synchronization-server determine the
+\subsection{How will the synchronization-server determine the
 finite-state machines that will execute an
 action}\label{how-will-the-synchronization-server-determine-the-finite-state-machines-that-will-execute-an-action}}
 
