--- a/paper/tex/implementation/How_will_the_communication_between_a_finite-state_machine_and_the_synchronization-server_take_place.tex
+++ b/paper/tex/implementation/How_will_the_communication_between_a_finite-state_machine_and_the_synchronization-server_take_place.tex
@@ -1,23 +1,23 @@
 \hypertarget{implementation}{%
-\section{Implementation}\label{implementation}}
+\chapter{Implementation}\label{implementation}}
 
 \hypertarget{how-will-the-communication-between-a-finite-state-machine-and-the-synchronization-server-take-place}{%
-\subsection{How will the communication between a finite-state machine
-and the synchronization-server take
+\section{How will the communication between a finite-state machine and
+the synchronization-server take
 place}\label{how-will-the-communication-between-a-finite-state-machine-and-the-synchronization-server-take-place}}
 
 In this section the implementation of the communication between
 finite-state machine and synchronization-server will be given.
 
 \hypertarget{how-will-a-finite-state-machine-send-their-status-to-the-synchronization-server}{%
-\subsubsection{How will a finite-state machine send their status to the
+\subsection{How will a finite-state machine send their status to the
 synchronization-server}\label{how-will-a-finite-state-machine-send-their-status-to-the-synchronization-server}}
 
 In this section the implementation of the finite-state machine sending
 its status to the synchronization-server be given.
 
 \hypertarget{what-is-a-finite-state-machine-status-and-how-will-it-be-stored}{%
-\paragraph{What is a finite-state machine status and how will it be
+\subsubsection{What is a finite-state machine status and how will it be
 stored}\label{what-is-a-finite-state-machine-status-and-how-will-it-be-stored}}
 
 For storing the finite-state machine status and its attributes a struct
@@ -37,8 +37,8 @@ will be used:
 \end{Shaded}
 
 \hypertarget{how-will-a-finite-state-machine-status-be-communicated-with-the-synchronization-server}{%
-\paragraph{How will a finite-state machine status be communicated with
-the
+\subsubsection{How will a finite-state machine status be communicated
+with the
 synchronization-server}\label{how-will-a-finite-state-machine-status-be-communicated-with-the-synchronization-server}}
 
 The finite-state machine node will use the following code snippet for
@@ -95,8 +95,8 @@ receiving a finite-state machine node status.
 \end{Shaded}
 
 \hypertarget{how-will-the-synchronization-server-communicate-actions-to-the-finite-state-machines}{%
-\subsubsection{How will the synchronization-server communicate actions
-to the finite-state
+\subsection{How will the synchronization-server communicate actions to
+the finite-state
 machines}\label{how-will-the-synchronization-server-communicate-actions-to-the-finite-state-machines}}
 
 The synchronization-server uses the following code snippet for sending
