--- a/paper/tex/implementation/How_will_the_functionalities_of_the_device-drivers_be_implemented.tex
+++ b/paper/tex/implementation/How_will_the_functionalities_of_the_device-drivers_be_implemented.tex
@@ -1,8 +1,8 @@
 \hypertarget{research}{%
-\section{Research}\label{research}}
+\chapter{Research}\label{research}}
 
 \hypertarget{what-can-the-functionality-of-the-device-drivers-be-implemented}{%
-\subsection{What can the functionality of the device-drivers be
+\section{What can the functionality of the device-drivers be
 implemented}\label{what-can-the-functionality-of-the-device-drivers-be-implemented}}
 
 In this section the implemented of the two device-drivers will be given.
@@ -14,7 +14,7 @@ When executing an action the device-drivers execute the specified action
 and determine their new sensitivity-list.
 
 \hypertarget{how-is-the-functionality-of-stdin_driver-implemented}{%
-\subsubsection{How is the functionality of stdin\_driver
+\subsection{How is the functionality of stdin\_driver
 implemented}\label{how-is-the-functionality-of-stdin_driver-implemented}}
 
 As specified in the Requirements the functionality of stdin\_driver will
@@ -84,7 +84,7 @@ be to read from stdin. The following code snippet is used:
 \end{Shaded}
 
 \hypertarget{how-can-the-functionality-of-stdout_driver-be-implemented}{%
-\subsubsection{How can the functionality of stdout\_driver be
+\subsection{How can the functionality of stdout\_driver be
 implemented}\label{how-can-the-functionality-of-stdout_driver-be-implemented}}
 
 As specified in the Requirements the functionality of stdout\_driver
