--- a/paper/tex/researchquestions.tex
+++ b/paper/tex/researchquestions.tex
@@ -1,11 +1,11 @@
 \hypertarget{research-questions}{%
-\section{Research Questions}\label{research-questions}}
+\chapter{Research Questions}\label{research-questions}}
 
 In this chapter the research questions and the underlying sub-questions
 will defined.
 
 \hypertarget{research-question}{%
-\subsection{Research question}\label{research-question}}
+\section{Research question}\label{research-question}}
 
 This paper has as aim to design and implement a generic synchronization
 server. This leads to the following research question:
@@ -19,7 +19,7 @@ server. This leads to the following research question:
 \end{itemize}
 
 \hypertarget{sub-questions}{%
-\subsection{Sub-questions}\label{sub-questions}}
+\section{Sub-questions}\label{sub-questions}}
 
 This research question is divided into sub-questions:
 
