--- a/paper/tex/sub-questions/How_will_a_finite-state_machine_be_build.tex
+++ b/paper/tex/sub-questions/How_will_a_finite-state_machine_be_build.tex
@@ -1,23 +1,23 @@
 \hypertarget{research}{%
-\section{Research}\label{research}}
+\chapter{Research}\label{research}}
 
 \hypertarget{how-will-a-finite-state-machine-be-build}{%
-\subsection{How will a finite-state machine be
+\section{How will a finite-state machine be
 build}\label{how-will-a-finite-state-machine-be-build}}
 
 In this sub-chapter will be explained how a finite-state machine will be
 build.
 
 \hypertarget{how-will-a-finite-state-machine-save-its-transition-table-sensitivity-list-and-alphabet}{%
-\subsubsection{How will a finite-state machine save its
-transition-table, sensitivity-list and
+\subsection{How will a finite-state machine save its transition-table,
+sensitivity-list and
 alphabet}\label{how-will-a-finite-state-machine-save-its-transition-table-sensitivity-list-and-alphabet}}
 
 In this section will be explained how a finite-state machine saves its
 information.
 
 \hypertarget{how-will-a-finite-state-machine-save-its-transition-table}{%
-\paragraph{How will a finite-state machine save its
+\subsubsection{How will a finite-state machine save its
 transition-table}\label{how-will-a-finite-state-machine-save-its-transition-table}}
 
 A transition-table stores the information that is needed for a
@@ -74,7 +74,7 @@ a hash table would have been used, and this disadvantage would not
 apply.
 
 \hypertarget{how-will-a-finite-state-machine-save-its-sensitivity-list}{%
-\paragraph{How will a finite-state machine save its
+\subsubsection{How will a finite-state machine save its
 sensitivity-list}\label{how-will-a-finite-state-machine-save-its-sensitivity-list}}
 
 The sensitivity-list is used to determine if a finite-state machine can
@@ -107,7 +107,7 @@ arrays of the transition-table, and has therefore the same advantages
 and disadvantages as the transition-table.
 
 \hypertarget{how-will-a-finite-state-machine-save-its-alphabet}{%
-\paragraph{How will a finite-state machine save its
+\subsubsection{How will a finite-state machine save its
 alphabet}\label{how-will-a-finite-state-machine-save-its-alphabet}}
 
 The alphabet is used to determine if a finite-state machine can ever
@@ -140,7 +140,7 @@ transition-table, and has therefore the same advantages and
 disadvantages as the transition-table.
 
 \hypertarget{how-will-a-finite-state-machine-determine-its-sensitivity-list-and-alphabet}{%
-\subsubsection{How will a finite-state machine determine its
+\subsection{How will a finite-state machine determine its
 sensitivity-list and
 alphabet}\label{how-will-a-finite-state-machine-determine-its-sensitivity-list-and-alphabet}}
 
@@ -151,7 +151,7 @@ range from 0 to the maximum value of an integer, is a viable action,
 when using an action as index.
 
 \hypertarget{how-will-a-finite-state-machine-determine-its-sensitivity-list}{%
-\paragraph{How will a finite-state machine determine its
+\subsubsection{How will a finite-state machine determine its
 sensitivity-list}\label{how-will-a-finite-state-machine-determine-its-sensitivity-list}}
 
 The sensitivity-list is equal to the inner array that is returned when
@@ -172,7 +172,7 @@ The following steps will be taken to determine the sensitivity-list:
 \end{itemize}
 
 \hypertarget{how-will-a-finite-state-machine-determine-its-alphabet}{%
-\paragraph{How will a finite-state machine determine its
+\subsubsection{How will a finite-state machine determine its
 alphabet}\label{how-will-a-finite-state-machine-determine-its-alphabet}}
 
 The alphabet contains all the actions that a finite-state machine can
@@ -192,7 +192,7 @@ The following steps will be taken to determine the alphabet:
 \end{itemize}
 
 \hypertarget{how-will-a-finite-state-machine-make-transitions}{%
-\paragraph{How will a finite-state machine make
+\subsubsection{How will a finite-state machine make
 transitions}\label{how-will-a-finite-state-machine-make-transitions}}
 
 Making a transition is to execute an action, determine a new
