--- a/paper/tex/sub-questions/How_will_a_synchronization-server_be_build.tex
+++ b/paper/tex/sub-questions/How_will_a_synchronization-server_be_build.tex
@@ -1,15 +1,15 @@
 \hypertarget{research}{%
-\section{Research}\label{research}}
+\chapter{Research}\label{research}}
 
 \hypertarget{how-will-a-synchronization-server-be-build}{%
-\subsection{How will a synchronization-server be
+\section{How will a synchronization-server be
 build}\label{how-will-a-synchronization-server-be-build}}
 
 In this sub-chapter will be explained how a synchronization-server will
 be build.
 
 \hypertarget{how-will-the-synchronization-server-save-the-data-of-the-finite-state-machines}{%
-\subsubsection{How will the synchronization-server save the data of the
+\subsection{How will the synchronization-server save the data of the
 finite-state
 machines}\label{how-will-the-synchronization-server-save-the-data-of-the-finite-state-machines}}
 
@@ -40,7 +40,7 @@ These derivatives will be stored in an array, an array is used because
 when using indexes it has a \(O (1)\) lookup time.
 
 \hypertarget{how-will-the-synchronization-server-determine-the-next-action-for-the-finite-state-machines}{%
-\subsubsection{How will the synchronization-server determine the next
+\subsection{How will the synchronization-server determine the next
 action for the finite-state
 machines}\label{how-will-the-synchronization-server-determine-the-next-action-for-the-finite-state-machines}}
 
@@ -79,7 +79,7 @@ Now the action that the finite-state machines will execute has been
 determined.
 
 \hypertarget{how-will-the-synchronization-server-determine-the-finite-state-machines-that-will-execute-an-action}{%
-\subsubsection{How will the synchronization-server determine the
+\subsection{How will the synchronization-server determine the
 finite-state machines that will execute an
 action}\label{how-will-the-synchronization-server-determine-the-finite-state-machines-that-will-execute-an-action}}
 
