--- a/paper/tex/sub-questions/How_will_the_communication_between_a_finite-state_machine_and_the_synchronization-server_take_place.tex
+++ b/paper/tex/sub-questions/How_will_the_communication_between_a_finite-state_machine_and_the_synchronization-server_take_place.tex
@@ -1,9 +1,9 @@
 \hypertarget{research}{%
-\section{Research}\label{research}}
+\chapter{Research}\label{research}}
 
 \hypertarget{how-will-the-communication-between-a-finite-state-machine-and-the-synchronization-server-take-place-under-minix}{%
-\subsection{How will the communication between a finite-state machine
-and the synchronization-server take place under
+\section{How will the communication between a finite-state machine and
+the synchronization-server take place under
 Minix}\label{how-will-the-communication-between-a-finite-state-machine-and-the-synchronization-server-take-place-under-minix}}
 
 In this sub-question will be discussed how the communication between
@@ -11,7 +11,7 @@ finite-state machines and synchronization-server will take place under
 Minix
 
 \hypertarget{what-is-a-finite-state-machine-status-and-how-will-it-be-communicated-with-the-synchronization-server}{%
-\subsubsection{What is a finite-state machine status and how will it be
+\subsection{What is a finite-state machine status and how will it be
 communicated with the
 synchronization-server}\label{what-is-a-finite-state-machine-status-and-how-will-it-be-communicated-with-the-synchronization-server}}
 
@@ -20,7 +20,7 @@ status is and how it will be communicated with the
 synchronization-server.
 
 \hypertarget{what-is-a-finite-state-machine-status-and-how-will-it-be-stored}{%
-\paragraph{What is a finite-state machine status and how will it be
+\subsubsection{What is a finite-state machine status and how will it be
 stored}\label{what-is-a-finite-state-machine-status-and-how-will-it-be-stored}}
 
 To determine how a finite-state machine will send its status first needs
@@ -50,8 +50,8 @@ These attributes are the only attributes the synchronization-server
 needs to determine the next action.
 
 \hypertarget{how-will-a-finite-state-machine-status-be-communicated-with-the-synchronization-server}{%
-\paragraph{How will a finite-state machine status be communicated with
-the
+\subsubsection{How will a finite-state machine status be communicated
+with the
 synchronization-server}\label{how-will-a-finite-state-machine-status-be-communicated-with-the-synchronization-server}}
 
 The steps of sending a finite-state machine its status are as following:
@@ -91,8 +91,8 @@ synchronization-server will do the following:
 \end{itemize}
 
 \hypertarget{how-will-the-synchronization-server-communicate-actions-to-the-finite-state-machines}{%
-\subsubsection{How will the synchronization-server communicate actions
-to the finite-state
+\subsection{How will the synchronization-server communicate actions to
+the finite-state
 machines}\label{how-will-the-synchronization-server-communicate-actions-to-the-finite-state-machines}}
 
 After the synchronization-server determines the next action the
