--- a/paper/tex/sub-questions/How_will_the_communication_between_processes_take_place_under_Minix.tex
+++ b/paper/tex/sub-questions/How_will_the_communication_between_processes_take_place_under_Minix.tex
@@ -1,16 +1,15 @@
 \hypertarget{research}{%
-\section{Research}\label{research}}
+\chapter{Research}\label{research}}
 
 \hypertarget{how-will-the-communication-between-processes-take-place-under-minix}{%
-\subsection{How will the communication between processes take place
-under
+\section{How will the communication between processes take place under
 Minix}\label{how-will-the-communication-between-processes-take-place-under-minix}}
 
 In this sub-chapter will be explained how a communication between
 processes takes place under Minix.
 
 \hypertarget{what-are-messages-and-how-can-they-be-used-to-communicate-between-processes-under-minix}{%
-\subsubsection{What are messages and how can they be used to communicate
+\subsection{What are messages and how can they be used to communicate
 between processes under
 Minix}\label{what-are-messages-and-how-can-they-be-used-to-communicate-between-processes-under-minix}}
 
@@ -18,7 +17,7 @@ In this sub-question will be explained what messages are and how they
 can be send and received under Minix.
 
 \hypertarget{what-are-messages-in-minix}{%
-\paragraph{What are messages in
+\subsubsection{What are messages in
 Minix}\label{what-are-messages-in-minix}}
 
 Minix uses their own message type as payload for sending and receiving
@@ -41,7 +40,7 @@ To give further explanation about the message type, each message type
 has a different structure of its data.
 
 \hypertarget{what-is-an-endpoint-and-how-can-it-be-determined-under-minix}{%
-\paragraph{What is an endpoint and how can it be determined under
+\subsubsection{What is an endpoint and how can it be determined under
 Minix}\label{what-is-an-endpoint-and-how-can-it-be-determined-under-minix}}
 
 The following quote from the minix3 wikipedia explains what an endpoint
@@ -136,7 +135,7 @@ processes\strut
 \end{longtable}
 
 \hypertarget{how-can-messages-be-send-and-received-under-minix}{%
-\paragraph{How can messages be send and received under
+\subsubsection{How can messages be send and received under
 Minix}\label{how-can-messages-be-send-and-received-under-minix}}
 
 First will be discussed what types of message sending and receiving
@@ -191,14 +190,14 @@ Status\strut
 \end{longtable}
 
 \hypertarget{how-can-memory-be-shared-between-processes-under-minix}{%
-\subsubsection{How can memory be shared between processes under
+\subsection{How can memory be shared between processes under
 Minix}\label{how-can-memory-be-shared-between-processes-under-minix}}
 
 In this sub-question will be discusses how data can be communicated
 between processes using memory grants under Minix.
 
 \hypertarget{what-is-a-memory-grant-under-minix}{%
-\paragraph{What is a memory grant under
+\subsubsection{What is a memory grant under
 Minix}\label{what-is-a-memory-grant-under-minix}}
 
 Memory grants allow processes to share large amount of data, data that
@@ -264,7 +263,7 @@ user application processes.\strut
 In this paper only the direct grants will be used.
 
 \hypertarget{how-can-memory-grants-be-used-to-share-data-under-minix}{%
-\paragraph{How can memory grants be used to share data under
+\subsubsection{How can memory grants be used to share data under
 Minix}\label{how-can-memory-grants-be-used-to-share-data-under-minix}}
 
 As only direct grants will be used in this paper only this type of
