--- a/paper/tex/sub-questions/How_will_the_functionalities_of_the_device-drivers_be_implemented.tex
+++ b/paper/tex/sub-questions/How_will_the_functionalities_of_the_device-drivers_be_implemented.tex
@@ -1,12 +1,12 @@
 \hypertarget{research}{%
-\section{Research}\label{research}}
+\chapter{Research}\label{research}}
 
 \hypertarget{what-can-the-functionality-of-the-device-drivers-be-implemented}{%
-\subsection{What can the functionality of the device-drivers be
+\section{What can the functionality of the device-drivers be
 implemented}\label{what-can-the-functionality-of-the-device-drivers-be-implemented}}
 
 \hypertarget{how-can-the-functionality-of-device-driver0-be-implemented}{%
-\subsubsection{How can the functionality of device-driver0 be
+\subsection{How can the functionality of device-driver0 be
 implemented}\label{how-can-the-functionality-of-device-driver0-be-implemented}}
 
 As specified in the Requirements the functionality of device-driver0
@@ -65,7 +65,7 @@ When combining the above commands with a loop the behavior of the first
 device-driver can be implemented.
 
 \hypertarget{how-can-the-functionality-of-device-driver1-be-implemented}{%
-\subsubsection{How can the functionality of device-driver1 be
+\subsection{How can the functionality of device-driver1 be
 implemented}\label{how-can-the-functionality-of-device-driver1-be-implemented}}
 
 As specified in the Requirements the functionality of device-driver1
