--- a/paper/tex/sub-questions/What_is_considered_a_FSP_based_design.tex
+++ b/paper/tex/sub-questions/What_is_considered_a_FSP_based_design.tex
@@ -1,9 +1,9 @@
 \hypertarget{research}{%
-\section{Research}\label{research}}
+\chapter{Research}\label{research}}
 
 \hypertarget{what-is-the-concurrent-system-architecture-that-will-be-used-in-this-paper}{%
-\subsection{What is the concurrent system architecture that will be used
-in this
+\section{What is the concurrent system architecture that will be used in
+this
 paper}\label{what-is-the-concurrent-system-architecture-that-will-be-used-in-this-paper}}
 
 This paper assumes the reader is familiar with Concurrency, LTS and FSP.
